# NNFS

./: .gitmodules  CMakeLists.txt
include/NNFS/: ActivationFunction.hpp  DenseLayer.hpp  NeuralNetwork.hpp  Neuron.hpp
src/: CMakeLists.txt
src/LR/: CMakeLists.txt  main.cpp
src/basic/: CMakeLists.txt  main.cpp
src/imp/: ActivationFunction.cpp  CMakeLists.txt  DenseLayer.cpp  NeuralNetwork.cpp  Neuron.cpp
