add_library(Main
        SHARED
        ActivationFunction.cpp
        DenseLayer.cpp
        NeuralNetwork.cpp
        "${CMAKE_BINARY_DIR}/../include/NNFS/ActivationFunction.hpp"
        "${CMAKE_BINARY_DIR}/../include/NNFS/DenseLayer.hpp"
        "${CMAKE_BINARY_DIR}/../include/NNFS/NeuralNetwork.hpp"
        )
